# niar

./: .gitignore  CHANGELOG.md  README.md  TODO  flake.nix  pyproject.toml
.github/workflows/: unit-tests.yml
docs/template/: .gitignore
docs/template/cxxrtl/: main.cc
docs/template/newproject/: __init__.py  targets.py
docs/template/tests/: test_top.py
niar/: __init__.py  build.py  cmdrunner.py  command.py  cxxrtl.py  cxxrtl_platform.py  project.py  test_cli.py
setup-action/: README.md  action.yml  actions.yml
src/niar/: __init__.py  build.py  cmdrunner.py  cxxrtl.py  logging.py  project.py
template/: .gitignore  pyproject.toml
template/.github/workflows/: cxxrtl-build.yml  synthesis.yml  unit-tests.yml
template/cxxrtl/: main.cc
template/newproject/: __main__.py
template/tests/: test_top.py
tests/: test_cli.py
