[project]
name = "niar"
version = "0.1.3"
description = "A small framework for building projects with Amaranth"
authors = [
    { name = "Asherah Connor", email = "ashe@kivikakk.ee" },
]
dependencies = [
    "amaranth[builtin-yosys]",
]
requires-python = ">=3.8"
license = { text = "BSD-2-Clause" }
readme = "README.md"

[project.urls]
Homepage = "https://sr.ht/~kivikakk/niar"

# [build-system]
# requires = ["pdm-backend"]
# build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.2",
    "amaranth-boards",
]

[tool.uv.sources]
amaranth-boards = { git = "https://github.com/amaranth-lang/amaranth-boards", rev = "19b97324ecf9111c5d16377af79f82aad761c476" }
amaranth = { git = "https://github.com/amaranth-lang/amaranth", rev = "bc2e90913311e326d8f396e33d7a1c7f6eef6e4e" }
