[project]
name = "newproject"
version = "0.0"
description = ""
authors = [
    {name = "name", email = "email@example.com"},
]
dependencies = [
    "amaranth >= 0.5, < 0.7",
    "amaranth-boards",
    "niar >= 0.1",
]
requires-python = ">=3.8"
license = {text = "BSD-2-Clause"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
